--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@
     --maroon: rgba(144, 23, 56, 1);
     --background-color: rgba(234, 245, 251, 1);
     --yellow: rgba(251, 253, 223, 0.8);
+    --lightgreen: rgba(136, 190, 136, 1);
   }
 
 body {
@@ -1309,6 +1310,12 @@ section {
         width: 100%;
     }
 }
+.software-apps {
+    img {
+        width: 2em;
+        height: auto;
+    }
+}
 
 .secondstar-casestudy {
     .site-header a{
@@ -1323,12 +1330,10 @@ section {
             height: 50em;
             width: 100%;
             overflow: hidden;
-        }
-        
+        } 
     }
-    
-
 }
+
 /* PLAYLIST CODEPEN https://codepen.io/ecemgo/pen/PwYyNxa*/
 :root {
         --light-clr: rgba(76, 70, 70, 1);
@@ -1339,6 +1344,42 @@ section {
         --scrollbar-track: rgb(79, 78, 78);
         --scrollbar-thumb: rgb(116, 116, 116);
       }
+.audio-player {
+    margin-top: 4em;
+    margin-bottom: 4em;
+    background:  RGBA(234, 245, 251, 1);
+    background: linear-gradient(0deg, rgba(234, 245, 251, 1) 0%, rgba(76, 70, 70, 0.7) 30%, rgba(76, 70, 70, 0.9) 50%, rgba(76, 70, 70, 0.7) 70%, rgba(234, 245, 251, 1) 100%);
+}
+.cover {
+    height: 90svh;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 25px;
+    box-shadow: 0 0.5px 0 1px rgba(255, 255, 255, 0.2) inset,
+        0 1px 0 0 rgba(255, 255, 255, 0.6) inset, 0 4px 16px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+    color: rgba(76, 70, 70, 1);
+    background-color: rgba(76, 70, 70, 1);
+    color: rgba(234, 245, 251, 1);
+    /* overflow-y: scroll; */
+    padding: 1em;
+    img {
+        width: 100%;
+        aspect-ratio: 1/1;
+        border-radius: 5px;
+        overflow: hidden;
+    }
+    h3 {
+        justify-content: left;
+        /* text-align: left; */
+    }
+    p {
+        padding-top: 1em;
+    }
+}
+
+
 .listen-along {
     
     *,
@@ -1365,106 +1406,64 @@ section {
     p {
         font-size: clamp(0.7rem, 3vw, 1rem);
     }
-    body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-    }
-    main {
-        position: relative;
-        width: 90%;
-        height: 90%;
-        background: transparent;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-        border-radius: 15px;
-        overflow: hidden;
-      }
-      
-    main::after,
-    main::before {
-        content: "";
-        position: absolute;
-        width: 250px;
-        aspect-ratio: 1/1;
-        border-radius: 50%;
-        transition: 5s ease-in-out;
-    }
-    
-    main::after {
-        top: -3%;
-        left: -5%;
-        transform: scale(1);
-        background-color: #5768af;
-    }
-    
-    main:hover::after {
-        left: 85%;
-        transform: scale(1.2);
-        background-color: #a0acbd;
-    }
-    
-    main::before {
-        bottom: -3%;
-        right: -5%;
-        transform: scale(1);
-        background-color: #ab4c72;
-    }
-    
-    main:hover::before {
-        right: 85%;
-        transform: scale(1.2);
-        background-color: #bda5ad;
-    }
     .content-playlist {
         /* position: absolute; */
+        background-color: rgba(76, 70, 70, 1);
         inset: 0;
         width: 100%;
-        height: 100%;
+        /* height: 100%; */
+        height: 90svh;
         display: grid;
         grid-template-columns: 100%;
         place-items: center;
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         border: 1px solid rgba(255, 255, 255, 0.5);
-        border-radius: inherit;
-        box-shadow: 0 0.5px 0 1px rgba(255, 255, 255, 0.2) inset,
+        border-radius: 25px;
+        box-shadow: 0 0.5px 0 1px rgba(234, 245, 251, 1) inset,
             0 1px 0 0 rgba(255, 255, 255, 0.6) inset, 0 4px 16px rgba(0, 0, 0, 0.1);
         z-index: 10;
         color: rgba(76, 70, 70, 1);
-        overflow-y: auto;
-        padding: 30px 30px 10px;
+        overflow-y: scroll;
+        padding: 1em 4em 1em;
     }
     .content-playlist::-webkit-scrollbar {
-        width: 7px;
+        width: .5em;
     }
     
     .content-playlist::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 0.3rem var(--scrollbar-track);
-        border-radius: 40px;
-        margin: 18px 0;
+        box-shadow: inset 0 0 0.3rem gainsboro;
+        border-radius: 3em;
+        margin: 1em 0;
     }
     
     .content-playlist::-webkit-scrollbar-thumb {
-        box-shadow: inset 0 0 0.5rem var(--scrollbar-thumb);
-        background-color: var(--primary-clr);
+        box-shadow: inset 0 0 0.5rem gainsboro;
+        background-color: rgba(234, 245, 251, 1);
         outline: none;
-        border-radius: 40px;
+        border-radius: 3em;
     }
     .slider-playlist {
         display: grid;
-        grid-template-columns: 45% 55%;
-        align-items: center;
-      }
+        /* grid-template-columns: 45% 55%; */
+        grid-template-columns: 1fr;
+        align-items: top;
+    }
       
     /** Slider */
     
     .swiper {
-        width: 300px;
-        height: auto;
+        margin: 0;
+        visibility: hidden;
+        width: 0;
+        height: 0;
+        overflow: hidden;
+        /* width: 300px;
+        height: auto; */
     }
     
     .swiper-slide {
+        position: relative;
         display: grid;
         grid-template-rows: 4fr 1fr;
         padding: 15px;
@@ -1507,7 +1506,8 @@ section {
         padding: 8px 10px;
         margin-bottom: 15px;
         border-bottom: 2px solid var(--primary-clr);
-        color: rgba(76, 70, 70, 1);
+        color: rgba(234, 245, 251, 1);
+
         cursor: pointer;
         user-select: none;
     }
@@ -1531,11 +1531,12 @@ section {
     
     .playlist-item i {
         font-size: 1.2rem;
-        color: rgba(76, 70, 70, 1);
+        color: rgba(183, 88, 88, 1);
     }
     
     .active-playlist-item {
-        background-color: var(--active-clr);
+        background-color: ivory;
+        color: rgba(76, 70, 70, 1);
         border-radius: 5px;
     }
     
@@ -1548,7 +1549,7 @@ section {
         width: 100%;
         border: 1px solid rgba(255, 255, 255, 0.3);
         border-radius: 10px;
-        background: rgba(251, 253, 223, 0.8);
+        background: rgba(251, 253, 223, 1);
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
@@ -1580,13 +1581,12 @@ section {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 45px;
+        width: 2em;
         aspect-ratio: 1/1;
-        margin: 5px 0;
-        color: var(--primary-clr);
+        margin: .5em 0;
+        color:  rgba(234, 245, 251, 1);
         outline: 0;
-        background: rgba(183, 88, 88, 1);
-        border: 2px solid rgba(255, 255, 255, 0.3);
+        background:rgba(76, 70, 70, 1);
         border-radius: 50%;
         box-shadow: 0 10px 20px rgba(5, 36, 28, 0.3);
         font-size: 1.5rem;
@@ -1622,7 +1622,7 @@ section {
         -webkit-appearance: none;
         width: 120px;
         height: 4px;
-        background: var(--primary-clr);
+        background: rgba(183, 88, 88, 1);
         border-radius: 4px;
         cursor: pointer;
     }
@@ -1643,14 +1643,7 @@ section {
         -webkit-appearance: none;
         width: 90%;
         height: 5px;
-        background: linear-gradient(
-            90deg,
-            var(--light-clr),
-            var(--secondary-clr),
-            var(--primary-clr),
-            var(--secondary-clr),
-            var(--light-clr)
-        );
+        background: rgba(183, 88, 88, 1);
         border-radius: 4px;
         margin: 12px 0 16px;
         cursor: pointer;
@@ -1679,7 +1672,7 @@ section {
     
     @media (max-width: 1100px) {
         .content-playlist {
-            padding: 40px 20px 20px;
+            padding: 2em;
         }
     
         .swiper {
@@ -1702,7 +1695,8 @@ section {
         }
     
         .swiper {
-            margin: 30px auto 50px;
+            /* margin: 30px auto 50px; */
+            margin: 0;
         }
     
         .player {
@@ -1721,7 +1715,8 @@ section {
     
         .swiper {
             width: 220px;
-            margin: 20px auto 35px;
+            /* margin: 20px auto 35px; */
+            margin: 0;
         }
     
         .playlist-item {
