--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@
 	112.5% => 18px
 	125%   => 20px
 */
+html{ 
+    scroll-behavior: smooth;
+}
 :root {
     --dark-color: rgba(76, 70, 70, 1);
     --pink: rgba(183, 88, 88, 1);
@@ -661,6 +664,7 @@ section {
     /* background-color: rgba(136, 190, 136, 1); */
 }
 .hero .hero-name-rect {
+    
     @media (min-width: 768px) {
         background-image: url(../img/hero_rect.png);
         background-repeat: no-repeat;
@@ -674,17 +678,25 @@ section {
     }
 }
 .hero .hero-lam-logo {
-    align-items: end;
+    align-items: center;
+    padding-top: 2em;
+    max-width: 60%;
     img {
         width: 100%;
     }
 }
 .hero .hero-buttons {
     align-items: center;
-    
-    @media (min-width: 1080px) {
-        padding-top: 10em;
-        text-align: center;
+    text-align: center;
+    @media (max-width:768px) {
+        display: flex;
+        p {
+            padding: 0 1em 0 0;
+        }
+        
+    }
+    @media (min-width: 768px) {
+        padding-top: 5em;
     }
     
 }
@@ -1119,6 +1131,10 @@ section {
         display: flex;
         align-items: end;
         gap: 10px;
+        margin-bottom: 2em;
+        img {
+            width: 3em;
+        }
     }
     .intro-contact {
         text-align: right;
@@ -1312,18 +1328,25 @@ section {
 }
 .software-apps {
     img {
-        width: 2em;
-        height: auto;
+        width: auto;
+        height: 3em;
     }
 }
 
 .secondstar-casestudy {
+    section {
+        margin-bottom: 2em;
+    }
     .site-header a{
         color: rgba(234, 245, 251, 1);
     }
-    h3 {
-        text-align: center;
+    h2 {
+        margin-top: 1em;
     }
+    /* h3 {
+        text-align: center;
+        margin-top: 0;
+    } */
     .full-width {
         padding: 0;
         img {
@@ -1332,7 +1355,59 @@ section {
             overflow: hidden;
         } 
     }
+    .ss-logo img {
+        align-items: center;
+        max-width: 10em;
+    }
+    .listen-button {
+        padding-top: 1em;
+        display: flex;
+        /* justify-content: center; */
+        align-items: flex-end;
+        p {
+            padding: 0 1em 0 0;
+        }
+        
+    }
 }
+.color {
+    display: flex;
+    justify-content: space-around;
+}
+.typography {
+    align-items: start;
+    display: flex;
+    justify-content: space-around;
+}
+.bookmaina {
+    h2, h4 {
+        text-align: center;
+    }
+    font-family: "bookmania", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.omnes {
+    h2, h4 {
+        text-align: center;
+    }
+    font-family: "omnes-pro", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+.gulim {
+    h2, h4 {
+        text-align: center;
+    }
+    font-family: "gulim", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+.project-asset img{
+    aspect-ratio: 1/1;
+    width: 100px;
+}
+
 
 /* PLAYLIST CODEPEN https://codepen.io/ecemgo/pen/PwYyNxa*/
 :root {
