--- a/css/style.css
+++ b/css/style.css
@@ -476,6 +476,7 @@ body {
     font-style: normal; */
 }
 
+
 .site-footer a {
     color: rgba(76, 70, 70, 1);
 }
@@ -527,6 +528,7 @@ body {
     background-color: rgba(234, 245, 251, 1);
     border-top: 0px solid #ccc;
     padding-top: 3em;
+    padding-bottom: 1.5em;
     text-align: center;
     background-image: url(../img/footer-deco.jpg);
     background-position: 50% 100%;
@@ -784,6 +786,7 @@ section {
     margin: 0;
     padding: 0;
     display: inline-block;
+    position: relative;
 }
 .site-navigation ul li li {
     white-space: nowrap;
@@ -793,6 +796,41 @@ section {
     padding: 0.5em 0.75em 0.4em 0.75em;
     
 }
+/* .site-navigation{
+    li:hover {
+        cursor: pointer;
+    }
+
+    ul li ul {
+        visibility: hidden;
+        opacity: 0;
+        display: none;
+        position: absolute;
+        background: #fff;
+        z-index: 100;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+    ul li:hover > ul {
+        visibility: visible;
+        opacity: 1;
+        display: block;
+    }
+    ul li:hover > ul,
+    ul li ul:hover {
+        visibility: visible;
+        opacity: 1;
+        display: block;
+        min-width: 250px;
+        text-align: left;
+        padding-top: 20px;
+        box-shadow: 0px 3px 5px -1px #ccc;
+    }
+    ul li ul li a { transition: all 0.5s ease; }
+} */
+
+
 
 
 @media (max-width: 768px) {
@@ -1002,10 +1040,10 @@ section {
         /* color: rgba(234, 245, 251, 1); */
     }
     .landing {
-        min-height: 100svh;
+        min-height: 80svh;
         display: grid;
         place-items: center;
-        padding: 14svh 1em;
+        padding: 3em 1em;
         background-color: rgba(234, 245, 251, 1);
         color: rgba(76, 70, 70, 1);
         h2 {
@@ -1025,22 +1063,21 @@ section {
         }
         .button {
             margin: 0;
-        }
+        }        
     }   
     .home-works {
         padding-top: 5%;
         padding-bottom: 5%;
     }
-    .bush-bg {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        transform: translate(0px, 320px);
-        opacity: 80%;
+}
+.email {
+    a{
+    color: var(--maroon);
+    }
+    a:hover {
+        color: var(--hover-pink);
     }
 }
-
 
 .chinese {
     font-family: "source-han-serif-tw-variable", sans-serif;
@@ -1086,11 +1123,11 @@ section {
     margin-top: var(--gridgap);
     margin-bottom: var(--gridgap);
     section {
-        padding: 0;
+        padding: 1em;
         --gridgap: 2em;
         justify-content: space-around;
         .row > * {
-            margin: 1em 2em;
+            margin: .75em .75em;
         }
         .row {
             gap: 0;
@@ -1129,6 +1166,8 @@ section {
             object-position: 50% 20%;
         }
     } */
+
+    
     .intro-software {
         display: flex;
         align-items: end;
@@ -1140,6 +1179,10 @@ section {
     }
     .intro-contact {
         text-align: right;
+        max-width: 38em;;
+        .button {
+            width: fit-content;
+        }
     }
     .about-animation {
         margin-top: 2em;
@@ -1177,6 +1220,11 @@ section {
             animation-duration: 3s;
             animation-iteration-count: infinite;
         }
+    }
+}
+@media (max-width: 960px) {
+    .about-animation {
+        display: none;
     }
 }
 .about .swiper {
@@ -1345,6 +1393,10 @@ section {
         height: 3em;
     }
 }
+.flex-center {
+    display: flex;
+    align-items: center;
+}
 
 .secondstar-casestudy {
     section {
@@ -1381,6 +1433,40 @@ section {
         }
         
     }
+}
+.block-gallery {
+    padding: 4em 0 2em;
+    display: flex;
+    flex-wrap: wrap;
+
+    .block-gallery-item {
+        flex: 1 0 24em;
+        margin: .5em;
+        box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+        overflow: hidden;
+    }
+    img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 400ms ease-out;
+    }
+    img:hover {
+        transform: scale(1.15);
+    }
+}
+@supports (display: grid) {
+	.block-gallery {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(27em, 1fr));
+		grid-gap: var(--gridgap);
+	}
+
+	.block-gallery,
+	.gallery-item {
+		margin: 0;
+	}
 }
 .asset-header {
     position: relative;
